--- a/preamble_math.sty
+++ b/preamble_math.sty
@@ -77,13 +77,16 @@
     refname={Thm.},
     preheadhook={
             \begin{tcolorbox}[
+                    enhanced,
                     parbox=false,
-                    arc=0mm,
-                    blanker,
+                    sharp corners,
+                    frame hidden,
+                    boxrule = 0pt,
                     left=1em,
                     top=0.5em,
                     bottom=0.5em,
-                    borderline west={0.25em}{0pt}{red}
+                    borderline west={0.25em}{0pt}{red},
+                    colback=red!10!white,
                 ]
                 },
                 postfoothook={
@@ -98,13 +101,16 @@
     refname={Cor.},
     preheadhook={
             \begin{tcolorbox}[
+                    enhanced,
                     parbox=false,
-                    arc=0mm,
-                    blanker,
+                    sharp corners,
+                    frame hidden,
+                    boxrule = 0pt,
                     left=1em,
                     top=0.5em,
                     bottom=0.5em,
-                    borderline west={0.25em}{0pt}{yellow}
+                    borderline west={0.25em}{0pt}{yellow},
+                    colback=yellow!10!white,
                 ]
                 },
                 postfoothook={
@@ -118,13 +124,16 @@
     numbered=yes,
     preheadhook={
             \begin{tcolorbox}[
+                    enhanced,
                     parbox=false,
-                    arc=0mm,
-                    blanker,
+                    sharp corners,
+                    frame hidden,
+                    boxrule = 0pt,
                     left=1em,
                     top=0.5em,
                     bottom=0.5em,
-                    borderline west={0.25em}{0pt}{yellow}
+                    borderline west={0.25em}{0pt}{yellow},
+                    colback=yellow!10!white,
                 ]
                 },
                 postfoothook={
@@ -139,13 +148,16 @@
     refname={Prop.},
     preheadhook={
             \begin{tcolorbox}[
+                    enhanced,
                     parbox=false,
-                    arc=0mm,
-                    blanker,
+                    sharp corners,
+                    frame hidden,
+                    boxrule = 0pt,
                     left=1em,
                     top=0.5em,
                     bottom=0.5em,
-                    borderline west={0.25em}{0pt}{orange}
+                    borderline west={0.25em}{0pt}{orange},
+                    colback=orange!10!white,
                 ]
                 },
                 postfoothook={
@@ -160,13 +172,16 @@
     refname={Def.},
     preheadhook={
             \begin{tcolorbox}[
+                    enhanced,
                     parbox=false,
-                    arc=0mm,
-                    blanker,
+                    sharp corners,
+                    frame hidden,
+                    boxrule = 0pt,
                     left=1em,
                     top=0.5em,
                     bottom=0.5em,
-                    borderline west={0.25em}{0pt}{cyan}
+                    borderline west={0.25em}{0pt}{cyan},
+                    colback=cyan!10!white,
                 ]
                 },
                 postfoothook={
@@ -180,13 +195,16 @@
     numbered=yes,
     preheadhook={
             \begin{tcolorbox}[
+                    enhanced,
                     parbox=false,
-                    arc=0mm,
-                    blanker,
+                    sharp corners,
+                    frame hidden,
+                    boxrule = 0pt,
                     left=1em,
                     top=0.5em,
                     bottom=0.5em,
-                    borderline west={0.25em}{0pt}{green}
+                    borderline west={0.25em}{0pt}{green},
+                    colback=green!10!white,
                 ]
                 },
                 postfoothook={
@@ -201,13 +219,16 @@
     numbered=no,
     preheadhook={
             \begin{tcolorbox}[
+                    enhanced,
                     parbox=false,
-                    arc=0mm,
-                    blanker,
+                    sharp corners,
+                    frame hidden,
+                    boxrule = 0pt,
                     left=1em,
                     top=0.5em,
                     bottom=0.5em,
-                    borderline west={0.25em}{0pt}{gray}
+                    borderline west={0.25em}{0pt}{gray},
+                    colback=gray!10!white,
                 ]
                 },
                 postfoothook={
