Use tcolorbox theorems

--- a/algebra-cheatsheet.tex
+++ b/algebra-cheatsheet.tex
@@ -18,9 +18,40 @@
 
 \section{Vector spaces and linear operators}
 
-\begin{theorem}[my theorem]
+\begin{theorem}{my theorem}{lol}
     i'm a theorem!
 \end{theorem}
+
+\begin{definition}{}{}
+    definition
+\end{definition}
+
+\begin{lemma}{}{}
+    lemma
+\end{lemma}
+
+\begin{proposition}{}{}
+    proposition
+\end{proposition}
+
+\begin{corollary}{}{}
+    corollary
+\end{corollary}
+
+\begin{remark}{}{}
+    hey
+\end{remark}
+
+\begin{example}{}{}
+    example
+\end{example}
+
+\begin{equation}
+    \label{my-eq}
+    x+2 = y
+\end{equation}
+
+\cref{my-eq}
 
 
 \end{document}
