--- a/preamble_base.sty
+++ b/preamble_base.sty
@@ -20,7 +20,7 @@
 \RequirePackage[many, skins]{tcolorbox} % for boxes
 \RequirePackage{tikz} % for drawings
 \RequirePackage{enumitem} % for custom lists
-\RequirePackage{hyperref} % for hyperlinks
+\RequirePackage{cleveref} % for hyperlinks
 
 \RequirePackage[
     type={CC},
