Add some exercises

--- a/preamble_math.sty
+++ b/preamble_math.sty
@@ -41,6 +41,8 @@
     {\scalebox{.6}{$\scriptscriptstyle\mathcal{O}$}}%\scriptscriptstyle
 }
 
+\newcommand{\half}{\frac{1}{2}}
+
 % *-------------------*
 % | *** Utilities *** |
 % *-------------------*
