--- a/algebra-cheatsheet.tex
+++ b/algebra-cheatsheet.tex
@@ -4,7 +4,7 @@
 
 \title{Linear Algebra CheatSheet}
 \author{Giacomo Ellero}
-\date{2024/2025}
+\date{a.y. 2024/2025}
 
 \usepackage{preamble}
 \usepackage{preamble_code}
